--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+numpy = "^1.23.4"
+discord = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
