derniere version docker

--- a/eugen/Dockerfile
+++ b/eugen/Dockerfile
@@ -1,11 +1,12 @@
-FROM python:3.9-slim-buster AS poetry
-ADD main.py .
+FROM python:3.10
+ADD main.py Home/jacque/eugen-master/eugen/ 
+# TO DO trouver la bonne URL pour le raspberry
 RUN pip install poetry
-WORKDIR /eugen
+WORKDIR Home/jacque/eugen-master/
 COPY pyproject.toml poetry.lock .
 RUN poetry export -f requirements.txt --output requirements.txt
 RUN pip install -r /eugen/requirements.txt
-CMD["python","./main.py"]
+CMD ["python","./main.py"]
 
 # CMD ["./manage.py", "runserver", "0.0.0.0:8000"]
 
