--- a/eugen/Dockerfile
+++ b/eugen/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.10
-ADD main.py Home/jacque/eugen-master/eugen/ 
-# TO DO trouver la bonne URL pour le raspberry
-RUN pip install poetry
-WORKDIR Home/jacque/eugen-master/
-COPY pyproject.toml poetry.lock .
-RUN poetry export -f requirements.txt --output requirements.txt
-RUN pip install -r /eugen/requirements.txt
-CMD ["python","./main.py"]
+
+
+RUN pip3 install numpy discord
+COPY . .
+# COPY pyproject.toml poetry.lock .
+# RUN poetry export -f requirements.txt --output requirements.txt
+# RUN pip install -r /eugen/requirements.txt
+CMD ["python","./eugen/main.py"]
 
 # CMD ["./manage.py", "runserver", "0.0.0.0:8000"]
 
@@ -17,3 +17,10 @@ CMD ["python","./main.py"]
 # RUN pip install -r requirements.txt
 # COPY . .
 # CMD ["./manage.py", "runserver", "0.0.0.0:8000"]
+
+
+
+# syntax=docker/dockerfile:1
+
+# COPY requirements.txt requirements.txt
+# RUN pip3 install -r requirements.txt
