--- a/eugen/Dockerfile
+++ b/eugen/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.10
 
 # WORKDIR /app
 # RUN pip install numpy discord
-COPY . .
+COPY . ./app
 # COPY pyproject.toml poetry.lock .
 # RUN poetry export -f requirements.txt --output requirements.txt
 # RUN pip install -r /eugen/requirements.txt
-CMD ["python","./main.py"]
+CMD ["python","./app/main.py"]
 
 # CMD ["./manage.py", "runserver", "0.0.0.0:8000"]
 
