ptet bien ouais

--- a/eugen/Dockerfile
+++ b/eugen/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.10
 
-# WORKDIR /app
+WORKDIR /app
 # RUN pip install numpy discord
-COPY . ./app
+COPY ./eugen .
 # COPY pyproject.toml poetry.lock .
 # RUN poetry export -f requirements.txt --output requirements.txt
 # RUN pip install -r /eugen/requirements.txt
-CMD ["python3", "./app/main.py"]
+CMD ["python3", "./main.py"]
 # CMD ["./manage.py", "runserver", "0.0.0.0:8000"]
 
 
